------------------------------------------------------------------------
r31 | trevor | 2008-12-30 12:48:19 -0800 (Tue, 30 Dec 2008) | 1 line

Adding file_separator attribute to change the file separator protocol
------------------------------------------------------------------------
r29 | trevor | 2008-12-29 08:17:29 -0800 (Mon, 29 Dec 2008) | 1 line

Adding new mp2 specific tests and POD regarding failing tests
------------------------------------------------------------------------
r27 | trevor | 2008-12-23 09:03:27 -0800 (Tue, 23 Dec 2008) | 1 line

Initial CPAN release
------------------------------------------------------------------------
r26 | trevor | 2008-12-23 09:02:11 -0800 (Tue, 23 Dec 2008) | 1 line

Moving root directory to represent the new naming structure
------------------------------------------------------------------------
r25 | trevor | 2008-12-23 08:58:02 -0800 (Tue, 23 Dec 2008) | 1 line

Changed name to Apache2-Response-FileMerge
------------------------------------------------------------------------
r24 | trevor | 2008-12-23 08:33:41 -0800 (Tue, 23 Dec 2008) | 1 line

Minor testing and bug fixes
------------------------------------------------------------------------
r23 | trevor | 2008-12-23 08:26:53 -0800 (Tue, 23 Dec 2008) | 1 line

Further unit test structure and cross-platform compatibility
------------------------------------------------------------------------
r22 | trevor | 2008-12-23 07:54:10 -0800 (Tue, 23 Dec 2008) | 1 line

More compatibility across mod_perl/Perl versions
------------------------------------------------------------------------
r20 | trevor | 2008-12-22 23:06:02 -0800 (Mon, 22 Dec 2008) | 1 line

POD, unit tests and build info.  Near first CPAN release
------------------------------------------------------------------------
r19 | trevor | 2008-12-21 21:15:14 -0800 (Sun, 21 Dec 2008) | 1 line

Added full support for CSS
------------------------------------------------------------------------