@@ -17,6 +17,7 @@ t/10-cache.t
 t/11-compress.t
 t/12-mp2.t
 t/13-file_separator.t
+t/14-document_root.t
 t/conf/extra.conf.in
 t/conf/extra.last.conf.in
 t/htdocs/cache/cache.js
